create add_store page and get in app

--- a/views/add_store.erb
+++ b/views/add_store.erb
@@ -27,7 +27,23 @@
         </div>
       </div>
     <% end %>
-    <a href="/add_store"><button class="btn btn-dark" type="button">Add new shoe store</button></a>
-    <a href="/add_brand"><button class="btn btn-dark" type="button">Add new shoe brand</button></a>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <div  class="card card-inverse" style="background-color: #333; border-color: #333;">
+      <div class="card-body text-white">
+        <h1>Add stores</h1>
+
+        <form action="/add_store" method="post">
+          <div class="form-group">
+            <label for="item">Store: </label>
+            <input id="item" name="item" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn btn-warning">Add store</button>
+        </form>
+        <br>
+      </div>
+    </div>
   </div>
 </div>
