--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-inverse bg-success sticky-top">
       <div class="navbar-brand">
-      <a class="navbar-brand" href="/">Shoe Stores</a>
+        <h3>Shoe Stores</h3><a class="navbar-brand" href="/"><img src="img/shoe.png"></a>
       </div>
     </nav>
     <div id="main" class="container">
