create add store functionality

--- a/views/add_store.erb
+++ b/views/add_store.erb
@@ -37,8 +37,8 @@
 
         <form action="/add_store" method="post">
           <div class="form-group">
-            <label for="item">Store: </label>
-            <input id="item" name="item" class="form-control" type="text">
+            <label for="store_name">Store: </label>
+            <input id="store_name" name="store_name" class="form-control" type="text">
           </div>
           <button type="submit" class="btn btn-warning">Add store</button>
         </form>
