--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,10 +8,22 @@
     <title>Shoe Stores</title>
   </head>
   <body>
-    <nav class="navbar navbar-inverse bg-success sticky-top">
+    <nav class="navbar navbar-inverse bg-info sticky-top">
+
       <div class="navbar-brand">
-        <h3>Shoe Stores</h3><a class="navbar-brand" href="/"><img src="img/shoe.png"></a>
+        <h3>Shoe Stores</h3>
       </div>
+      <div class="navbar-brand">
+        <a class="navbar-brand" href="/"><img src="img/shoe.png"></a>
+      </div>
+      <div class="navbar-brand">
+      </div>
+
+      <div class="navbar-brand">
+        <a href="/add_store"><button class="btn btn-dark" type="button">Add new shoe store</button></a>
+        <a href="/add_brand"><button class="btn btn-dark" type="button">Add new shoe brand</button></a>
+      </div>
+
     </nav>
     <div id="main" class="container">
       <br>
