--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,33 @@
         </div>
       </div>
     <% end %>
-    <a href="/add_store"><button class="btn btn-dark" type="button">Add new shoe store</button></a>
-    <a href="/add_brand"><button class="btn btn-dark" type="button">Add new shoe brand</button></a>
+    <br>
+      <% if @brands.any? %>
+        <div  class="card card-inverse" style="background-color: #333; border-color: #333;">
+          <div class="card-body">
+            <table class="table table-hover table-bordered">
+              <thead class="thead text-black bg-light">
+                <tr>
+                  <th>Shoe brand</th>
+                  <th>View</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @brands.each do |brand| %>
+                  <tr class="table-light">
+                    <td class="align-middle"><%= brand.brand_name %></td>
+                    <td style="text-align: center;">
+                      <a href="/brand/<%= brand.id %>">
+                        <button class="btn btn-success" type="button">View Store Page</button>
+                      </a>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      <% end %>
+      <br>
   </div>
 </div>
