add brand linking

--- a/views/add_brand.erb
+++ b/views/add_brand.erb
@@ -17,7 +17,7 @@
                   <td class="align-middle"><%= brand.brand_name %></td>
                   <td style="text-align: center;">
                     <a href="/brand/<%= brand.id %>">
-                      <button class="btn btn-success" type="button">View Store Page</button>
+                      <button class="btn btn-success" type="button">View Brand Page</button>
                     </a>
                   </td>
                 </tr>
