fix bug, prevent user from adding duplicate brands to a store

--- a/views/add_brand.erb
+++ b/views/add_brand.erb
@@ -37,7 +37,7 @@
 
         <form action="/add_brand" method="post">
           <div class="form-group">
-            <label for="brand_name">Store: </label>
+            <label for="brand_name">Brand: </label>
             <input id="brand_name" name="brand_name" class="form-control" type="text">
           </div>
           <button type="submit" class="btn btn-warning">Add brand</button>
