--- a/views/store.erb
+++ b/views/store.erb
@@ -30,5 +30,6 @@
         <br>
       </div>
     </div>
+    <a href="/"><button type="button" class="btn btn-dark">Home</button></a>
   </div>
 </div>
