add error handling, validation

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,6 +20,7 @@
       </div>
 
       <div class="navbar-brand">
+        <a href="/"><button class="btn btn-dark" type="button">Home</button></a>
         <a href="/add_store"><button class="btn btn-dark" type="button">Add new shoe store</button></a>
         <a href="/add_brand"><button class="btn btn-dark" type="button">Add new shoe brand</button></a>
       </div>
