--- a/views/add_brand.erb
+++ b/views/add_brand.erb
@@ -8,13 +8,15 @@
             <thead class="thead text-black bg-light">
               <tr>
                 <th>Shoe brand</th>
-                <th>View</th>
+                <th>Price</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
               <% @brands.each do |brand| %>
                 <tr class="table-light">
                   <td class="align-middle"><%= brand.brand_name %></td>
+                  <td class="align-middle">$<%= brand.price %>.00</td>
                   <td style="text-align: center;">
                     <a href="/brand/<%= brand.id %>">
                       <button class="btn btn-success" type="button">View Brand Page</button>
@@ -29,6 +31,7 @@
     <% end %>
   </div>
 </div>
+<br>
 <div class="row">
   <div class="col">
     <div  class="card card-inverse" style="background-color: #333; border-color: #333;">
@@ -39,6 +42,10 @@
           <div class="form-group">
             <label for="brand_name">Brand: </label>
             <input id="brand_name" name="brand_name" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="price">Price: </label>
+            <input id="price" name="price" class="form-control" type="text">
           </div>
           <button type="submit" class="btn btn-warning">Add brand</button>
         </form>
