--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,12 @@
     <% if @stores.any? %>
       <div  class="card card-inverse" style="background-color: #333; border-color: #333;">
         <div class="card-body">
+          <h3 class="text-white">Shoe Stores</h3>
           <table class="table table-hover table-bordered">
             <thead class="thead text-black bg-light">
               <tr>
                 <th>Shoe store</th>
-                <th>View</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -31,20 +32,23 @@
       <% if @brands.any? %>
         <div  class="card card-inverse" style="background-color: #333; border-color: #333;">
           <div class="card-body">
+            <h3 class="text-white">Brands</h3>
             <table class="table table-hover table-bordered">
               <thead class="thead text-black bg-light">
                 <tr>
                   <th>Shoe brand</th>
-                  <th>View</th>
+                  <th>Price</th>
+                  <th></th>
                 </tr>
               </thead>
               <tbody>
                 <% @brands.each do |brand| %>
-                  <tr class="table-light">
+                  <tr class="table-dark">
                     <td class="align-middle"><%= brand.brand_name %></td>
+                    <td class="align-middle">$<%= brand.price %>.00</td>
                     <td style="text-align: center;">
                       <a href="/brand/<%= brand.id %>">
-                        <button class="btn btn-success" type="button">View Store Page</button>
+                        <button class="btn btn-success" type="button">View Brand Page</button>
                       </a>
                     </td>
                   </tr>
