test for character limit, update readme

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
         <h3>Shoe Stores</h3>
       </div>
       <div class="navbar-brand">
-        <a class="navbar-brand" href="/"><img src="img/shoe.png"></a>
+        <a class="navbar-brand" href="/"><img src="img/shoe.png" class="banner_logo"></a>
       </div>
       <div class="navbar-brand">
       </div>
